# 6th-semester-ML-project

./: .gitignore  README.md  algorithm.py  demo.py  pyproject.toml  requirements.txt
app/: __init__.py  forms.py  routes.py
app/static/: site.webmanifest
app/templates/: form.html
instance/: Development.toml
