[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "App"
version = "1.0.0"
requires-python = ">= 3.10"
dependencies = [
    'Flask==3.0.3', 'Flask-WTF==1.2.2', 'joblib==1.4.2', 'numpy==2.2.2', 'python-dotenv==1.0.1'
]

[project.scripts]
appcli = "app:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
app = ["**/static/**", "**/templates/**"]

[tool.mypy]
plugins = "pydantic.mypy"
strict = true
disallow_untyped_defs = true